fix font not showing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -110,43 +110,12 @@
   text-transform: uppercase;
 }
 
-/* .hero h1 .brand-name {
-  text-shadow:
-    0 0 4px rgba(255, 246, 223, 0.78),
-    0 0 10px rgba(255, 246, 223, 0.36),
-    0 0 18px rgba(255, 78, 184, 0.42),
-    0 0 34px rgba(255, 78, 184, 0.28),
-    0 0 58px rgba(255, 78, 184, 0.2),
-    0 0 86px rgba(255, 78, 184, 0.14);
-} */
-
-/* .hero h1 .brand-name {
-  text-shadow:
-    0 0 10px rgba(255, 246, 223, 0.36),
-    0 0 18px rgba(255, 78, 184, 0.42),
-    0 0 34px rgba(255, 78, 184, 0.28),
-    0 0 58px rgba(255, 78, 184, 0.2),
-    0 0 86px rgba(255, 78, 184, 0.14);
-} */
-
-/* .hero h1 .brand-name {
-  text-shadow:
-    0 0 6px rgba(255, 246, 223, 0.36),
-    0 0 10px rgba(255, 78, 184, 0.42),
-    0 0 36px rgba(255, 78, 184, 0.28),
-    0 0 50px rgba(255, 78, 184, 0.2),
-    0 0 72px rgba(255, 78, 184, 0.14);
-} */
-
 .hero h1 .brand-name {
   text-shadow:
     0 0 1px #fff,
     0 0 3px #fff,
-    /* 0 0 21px #fff, */
     0 0 10px #ff4eb8,
     0 0 20px #ff4eb8,
-    /* 0 0 60px #ff4eb8, */
-    /* 0 0 70px #ff4eb8, */
     0 0 110px #ff4eb8;
 }
 
